fix height on mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,15 +1,28 @@
 html, body {
   font-family: sans-serif;
-  min-height: 100vh;
+  height: 100%;
   margin: 0;
 }
 
 .container {
-  min-height: 100vh;
-  max-height: 100vh;
+  min-height: 100%;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: auto;
+  background-color: black;
+  font-family: 'Knewave', cursive;
+  color: white;
+  padding: 12px 12px;
+  font-size: 24px;
 }
 
 .messages {
@@ -38,30 +51,9 @@ html, body {
   margin-right: 5px;
 }
 
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  margin-bottom: auto;
-  background-color: black;
-  font-family: 'Knewave', cursive;
-  color: white;
-  padding: 12px 12px;
-  font-size: 24px;
-}
-
 input, button {
   margin: 0.1em;
   font-size: 16px;
-}
-
-.nick-input {
-  background: transparent;
-  border: none;
-  color: white;
-  border-bottom: 1px solid #ccc;
-  margin-left: auto;
 }
 
 button {
@@ -73,6 +65,13 @@ button {
   border-radius: 5px;
 }
 
+.nick-input {
+  background: transparent;
+  border: none;
+  color: white;
+  border-bottom: 1px solid #ccc;
+  margin-left: auto;
+}
 
 #msg {
   background: transparent;
